kuber/2.3/manifests/ingress_secret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: netology
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hw-ingress.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-front
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-back
                port:
                  number: 8080

  tls:
    - hosts:
       - hw-ingress.local
      secretName: crt
